[package]
name = "xpose"
version = "0.0.0"
authors = ["Purple Hair Rust Bard <AshantiMutinta@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0.19", features = ["full","fold"] }

[features]
xpose_on = []

